log
Wed 24 Apr 2024 06:29:35 PM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
0d32f42
Wed 24 Apr 2024 06:32:06 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
0de5a77
Wed 24 Apr 2024 06:42:38 PM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
ceaa182
Thu 25 Apr 2024 12:53:52 AM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:10: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   51 |    Pair* nuevo = createPair(key,value);
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
d2c1afe
Thu 25 Apr 2024 12:54:22 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:11: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   51 |     Pair* nuevo = createPair(key,value);
      |           ^~~~~
cc1: all warnings being treated as errors
Compilation failed
eab86cd
Thu 25 Apr 2024 12:55:00 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 40/70
ec9eaf2
Thu 25 Apr 2024 01:01:40 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
97823cf
Thu 25 Apr 2024 01:03:19 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  12|1
total_score: 60/70
83e410f
